--- a/team/index.html
+++ b/team/index.html
@@ -1,8 +1,42 @@
 ---
-layout: page
+layout: wide-page
 title: Team
 group: navigation
-latitudelat: 45.5200
-lng: -122.6819
-zoom: 6
 ---
+
+<div id="carousel-wrapper" class="team">
+  <div id="geocarousel" class="carousel">
+    <!-- Indicators -->
+    <!-- <ol class="carousel-indicators" style="display:none">
+      <li data-target="#geocarousel" data-slide-to="0" class="active"></li>
+      {% for post in site.tags.place reversed %}
+      <li data-target="#geocarousel" data-slide-to="{{forloop.index + 1}}"></li>
+      {% endfor %}
+    </ol> -->
+    <div class="carousel-inner">
+      {% for post in site.tags.team reversed %}
+      <div class="item{% if forloop.first %} active{% endif %}" data-lat="{{ post.lat }}" data-lng="{{ post.lng }}" data-zoom="{{ post.zoom }}" data-hash="{{ post.url }}" data-image="{{ post.image }}">
+      	{% if post.image %}
+      	<img class="stretch" src="/assets/themes/p97/images/{{ post.image }}"/>
+      	{% else %}
+      	<img class="stretch" src="/assets/themes/p97/images/portraits/team.jpg"/>
+      	{% endif %}
+      </div>
+      {% endfor %}
+    </div>
+    <a class="left carousel-control" href="#geocarousel" data-slide="prev">
+      <span class="icon-prev"></span>
+    </a>
+    <a class="right carousel-control" href="#geocarousel" data-slide="next">
+      <span class="icon-next"></span>
+    </a>
+  </div>
+</div>
+<div class="container">
+  <div class="row-fluid">
+    <div class="col-md-8">
+    <h2>Point 97</h2>
+      <p>We are a fresh-thinking, hard-working team with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre. Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
+    </div>
+  </div>
+</div>
