--- a/team/index.html
+++ b/team/index.html
@@ -3,40 +3,101 @@ layout: wide-page
 title: Team
 group: navigation
 ---
-
-<div id="carousel-wrapper" class="team">
-  <div id="geocarousel" class="carousel">
-    <!-- Indicators -->
-    <!-- <ol class="carousel-indicators" style="display:none">
-      <li data-target="#geocarousel" data-slide-to="0" class="active"></li>
-      {% for post in site.tags.place reversed %}
-      <li data-target="#geocarousel" data-slide-to="{{forloop.index + 1}}"></li>
-      {% endfor %}
-    </ol> -->
-    <div class="carousel-inner">
-      {% for post in site.tags.team reversed %}
-      <div class="item{% if forloop.first %} active{% endif %}" data-lat="{{ post.lat }}" data-lng="{{ post.lng }}" data-zoom="{{ post.zoom }}" data-hash="{{ post.url }}" data-image="{{ post.image }}">
-      	{% if post.image %}
-      	<img class="stretch" src="/assets/themes/p97/images/{{ post.image }}"/>
-      	{% else %}
-      	<img class="stretch" src="/assets/themes/p97/images/portraits/team.jpg"/>
-      	{% endif %}
-      </div>
-      {% endfor %}
-    </div>
-    <a class="left carousel-control" href="#geocarousel" data-slide="prev">
-      <span class="icon-prev"></span>
-    </a>
-    <a class="right carousel-control" href="#geocarousel" data-slide="next">
-      <span class="icon-next"></span>
-    </a>
-  </div>
-</div>
+<img class="stretch" src="/assets/themes/p97/images/portraits/team.jpg"/>
 <div class="container">
   <div class="row-fluid">
+    <div class="col-md-4">
+      <h2>Point 97</h2>
+        <p>We are a fresh-thinking, hard-working team with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre. Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
+      </div>
+    </div>
     <div class="col-md-8">
-    <h2>Point 97</h2>
-      <p>We are a fresh-thinking, hard-working team with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre. Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
+      <div class="row-fluid">
+        <div class="col-md-6">
+          <div class="thumbnail">
+            <div class="caption">
+              <img src="http://lorempixel.com/g/300/400/people/3/">
+              <h3>Ruby Gates</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="thumbnail">
+            <div class="caption">
+              <img src="http://lorempixel.com/g/300/400/people/3/">
+              <h3>Charles Steinback</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="row-fluid">
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Jennifer Bloesser</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Shaunna McCovey</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Cheryl Chen</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Leanne Weiss</h3>
+        </div>
+      </div>
     </div>
   </div>
+  <div class="row-fluid">
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Tim Welch</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Scott Fletcher</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Edwin Knuth</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <h3>Tim Glazer</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
