--- a/team/index.html
+++ b/team/index.html
@@ -3,55 +3,48 @@ layout: wide-page
 title: Team
 group: navigation
 ---
-<img class="stretch" src="/assets/themes/p97/images/portraits/team.jpg"/>
+{% include JB/setup %}
+<img class="stretch" src="{{ ASSET_PATH }}/images/portraits/team.jpg"/>
 <div class="container">
   <div class="row-fluid">
     <div class="col-md-4">
       <h2>Point 97</h2>
         <p>We are a fresh-thinking, hard-working team with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre. Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
       </div>
-    </div>
     <div class="col-md-8">
       <div class="row-fluid">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="thumbnail">
             <div class="caption">
-              <img src="http://lorempixel.com/g/300/400/people/3/">
+              <img src="{{ ASSET_PATH }}/images/portraits/ruby_thumbnail.jpg">
               <h3>Ruby Gates</h3>
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="thumbnail">
             <div class="caption">
-              <img src="http://lorempixel.com/g/300/400/people/3/">
+              <img src="{{ ASSET_PATH }}/images/portraits/charles_thumbnail.jpg">
               <h3>Charles Steinback</h3>
             </div>
           </div>
         </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <div class="caption">
+              <img src="{{ ASSET_PATH }}/images/portraits/jennifer_thumbnail.jpg">
+              <h3>Jennifer Bloesser</h3>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
   <div class="row-fluid">
     <div class="col-md-3">
       <div class="thumbnail">
         <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
-          <h3>Jennifer Bloesser</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
-          <h3>Shaunna McCovey</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <img src="{{ ASSET_PATH }}/images/portraits/cheryl_thumbnail.jpg">
           <h3>Cheryl Chen</h3>
         </div>
       </div>
@@ -59,8 +52,16 @@ group: navigation
     <div class="col-md-3">
       <div class="thumbnail">
         <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
-          <h3>Leanne Weiss</h3>
+          <img src="{{ ASSET_PATH }}/images/portraits/glazer_thumbnail.jpg">
+          <h3>Tim Glazer</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="{{ ASSET_PATH }}/images/portraits/scott_thumbnail.jpg">
+          <h3>Scott Fletcher</h3>
         </div>
       </div>
     </div>
@@ -69,23 +70,7 @@ group: navigation
     <div class="col-md-3">
       <div class="thumbnail">
         <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
-          <h3>Tim Welch</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
-          <h3>Scott Fletcher</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
+          <img src="{{ ASSET_PATH }}/images/portraits/edwin_thumbnail.jpg">
           <h3>Edwin Knuth</h3>
         </div>
       </div>
@@ -93,8 +78,24 @@ group: navigation
     <div class="col-md-3">
       <div class="thumbnail">
         <div class="caption">
-          <img src="http://lorempixel.com/g/200/200/people/3/">
-          <h3>Tim Glazer</h3>
+          <img src="{{ ASSET_PATH }}/images/portraits/shaunna_thumbnail.jpg">
+          <h3>Shaunna McCovey</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="{{ ASSET_PATH }}/images/portraits/leanne_thumbnail.jpg">
+          <h3>Leanne Weiss</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="{{ ASSET_PATH }}/images/portraits/tim_thumbnail.jpg">
+          <h3>Tim Welch</h3>
         </div>
       </div>
     </div>
