adding deck logo

--- a/team/index.html
+++ b/team/index.html
@@ -1,5 +1,5 @@
 ---
-layout: wide-page
+layout: page
 title: Team
 group: navigation
 ---
@@ -7,13 +7,13 @@ group: navigation
 <img class="stretch" src="{{ ASSET_PATH }}/images/portraits/team.jpg"/>
 <div class="container">
   <div class="row-fluid">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <h2>Point 97</h2>
         <p>We are a fresh-thinking, hard-working team with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre. Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
-      </div>
-    <div class="col-md-8">
+    </div>
+    <div class="col-md-9">
       <div class="row-fluid">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-12 col-sm-4">
           <div class="thumbnail">
             <div class="caption">
               <img src="{{ ASSET_PATH }}/images/portraits/ruby_thumbnail.jpg">
@@ -21,7 +21,7 @@ group: navigation
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4  col-xs-12 col-sm-4">
           <div class="thumbnail">
             <div class="caption">
               <img src="{{ ASSET_PATH }}/images/portraits/charles_thumbnail.jpg">
@@ -29,7 +29,7 @@ group: navigation
             </div>
           </div>
         </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-12  col-sm-4">
         <div class="thumbnail">
           <div class="caption">
               <img src="{{ ASSET_PATH }}/images/portraits/jennifer_thumbnail.jpg">
@@ -40,8 +40,10 @@ group: navigation
       </div>
     </div>
   </div>
+</div>
+<div class="container">
   <div class="row-fluid">
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/cheryl_thumbnail.jpg">
@@ -49,7 +51,7 @@ group: navigation
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/glazer_thumbnail.jpg">
@@ -57,45 +59,43 @@ group: navigation
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/scott_thumbnail.jpg">
-          <h3>Scott Fletcher</h3>
+          <h3>Scott&nbsp;Fletcher</h3>
         </div>
       </div>
     </div>
-  </div>
-  <div class="row-fluid">
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/edwin_thumbnail.jpg">
-          <h3>Edwin Knuth</h3>
+          <h3>Edwin&nbsp;Knuth</h3>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/shaunna_thumbnail.jpg">
-          <h3>Shaunna McCovey</h3>
+          <h3>Shaunna&nbsp;McCovey</h3>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/leanne_thumbnail.jpg">
-          <h3>Leanne Weiss</h3>
+          <h3>Leanne&nbsp;Weiss</h3>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/tim_thumbnail.jpg">
-          <h3>Tim Welch</h3>
+          <h3>Tim&nbsp;Welch</h3>
         </div>
       </div>
     </div>
