Changed my last name from Glazer to Glaser :)

--- a/team/index.html
+++ b/team/index.html
@@ -55,7 +55,7 @@ group: navigation
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/glazer_thumbnail.jpg">
-          <h3>Tim Glazer</h3>
+          <h3>Tim Glaser</h3>
         </div>
       </div>
     </div>
