--- a/services/index.html
+++ b/services/index.html
@@ -1,6 +1,11 @@
 ---
 layout: page
 title: Services
+group: navigation
 ---
-stuff
-
+{% include JB/setup %}
+<img class="stretch" src="{{ ASSET_PATH }}/images/portraits/team.jpg"/>
+<div class="container">
+  <div class="row-fluid">
+  </div>
+</div>
