--- a/services/index.html
+++ b/services/index.html
@@ -4,8 +4,35 @@ title: Services
 group: navigation
 ---
 {% include JB/setup %}
-<img class="stretch" src="{{ ASSET_PATH }}/images/portraits/team.jpg"/>
-<div class="container">
-  <div class="row-fluid">
-  </div>
+<div class="container about">
+ 	<div class="row bug">
+ 		<div class="col-sm-6 col-md-6">
+ 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/screenshots/deck.png"/>
+ 			
+ 		</div>
+  		<div class="col-sm-6 col-md-6">
+  			<h2>Digital Deck</h2>
+  			<p class="dark">Collect and manage fisheries data more efficiently</p>
+ 			<p>Digital Deck is designed to meet the expressed needs of community fishing organizations and fisheries agencies for collecting and integrating fisheries data supporting harvest accountability, traceability, collaborative research, spatial planning, and monitoring.</p>
+ 			<ul>
+	 			<li>Mobile data capture at sea</li>
+	 			<li>Access to catch history</li>
+	 			<li>Meet agency logbook requirements</li>
+	 			<li>Track progress towards fishery management goals</li>
+	 			<li>Open Source License</li>
+	 		</ul>
+  		</div>
+  	</div>
+ 	<div class="row bug">
+ 		<div class="col-sm-6 col-md-6">
+  			<h2>Marine Planner</h2>
+  			<p class="dark">Collaborative planning and engagement</p>
+ 			<p>Designed to meet the needs of government agencies, planning bodies, and industry, Marine Planner engages in marine planning activities through data visualization, spatial analysis, and public and stakeholder engagement.</p>
+ 			<p>Marine Planner meets one or all of these needs by offering a powerful web-based platform along with additional software components for collaboration, analysis, and visualization that can be quickly added and tailored to your needs in a cost-effective way.  Give your audience everything they need and nothing they don’t.</p>
+  		</div>
+  		<div class="col-sm-1 col-md-1"></div>
+ 		<div class="col-sm-5 col-md-5">
+ 			<img src="{{ ASSET_PATH }}/images/wind.jpg" class="img-circle"/>
+ 		</div>
+  	</div>
 </div>
