--- a/services/index.html
+++ b/services/index.html
@@ -30,9 +30,8 @@ group: navigation
  			<p>Designed to meet the needs of government agencies, planning bodies, and industry, Marine Planner engages in marine planning activities through data visualization, spatial analysis, and public and stakeholder engagement.</p>
  			<p>Marine Planner meets one or all of these needs by offering a powerful web-based platform along with additional software components for collaboration, analysis, and visualization that can be quickly added and tailored to your needs in a cost-effective way.  Give your audience everything they need and nothing they don’t.</p>
   		</div>
-  		<div class="col-sm-1 col-md-1"></div>
- 		<div class="col-sm-5 col-md-5">
- 			<img src="{{ ASSET_PATH }}/images/wind.jpg" class="img-circle"/>
+ 		<div class="col-sm-6 col-md-6">
+ 			<img src="{{ ASSET_PATH }}/images/screenshots/mp-features.png" />
  		</div>
   	</div>
 </div>
