--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ group: navigation
 <div class="container about">
  	<div class="row bug">
  		<div class="col-sm-5 col-md-5">
- 			<img src="{{ ASSET_PATH }}/images/wind.jpg" class="img-circle"/>
+ 			<img src="{{ ASSET_PATH }}/images/about/about_windmills.png" />
  		</div>
  		<div class="col-sm-1 col-md-1"></div>
   		<div class="col-sm-6 col-md-6">
@@ -23,12 +23,12 @@ group: navigation
  		</div>
  		<div class="col-sm-1 col-md-1"></div>
  		<div class="col-sm-5 col-md-5">
- 			<img src="{{ ASSET_PATH }}/images/portraits/team-small.jpg"/>
+ 			<img src="{{ ASSET_PATH }}/images/about/about_team.jpg" />
  		</div>
  	</div>
 	<div class="row bug">
 		<div class="col-sm-5 col-md-5">
-			<img src="{{ ASSET_PATH }}/images/sail.jpg" class="img-circle"/>
+			<img src="{{ ASSET_PATH }}/images/about/about_fisherman.png" />
 		</div>
 		<div class="col-sm-1 col-md-1"></div>
  		<div class="col-sm-6 col-md-6">
@@ -47,19 +47,10 @@ group: navigation
  			<img src="{{ ASSET_PATH }}/images/screenshots/dash.png"/>
  		</div>
  	</div>
- 		<div class="row bug">
- 			
- 	 		<div class="col-sm-6 col-md-6">
- 	 			<p><span class="dark">At Point 97, we have been tackling that question in increasingly sophisticated ways for over 20 years,</span> in collaboration with ﬁshing communities, energy developers, conservation groups, governments, maritime industry, coastal landowners and other stakeholders around the world.</p>
- 	 		</div>
- 	 		<div class="col-sm-1 col-md-1"></div>
- 	 		<div class="col-sm-5 col-md-5">
- 	 			<img src="{{ ASSET_PATH }}/images/portraits/team-small.jpg"/>
- 	 		</div>
- 	 	</div>
+ 		
  		<div class="row bug">
  			<div class="col-sm-5 col-md-5">
- 				<img src="{{ ASSET_PATH }}/images/screenshots/planner.png"/>
+ 				<img src="{{ ASSET_PATH }}/images/about/about_map.png" />
  			</div>
  			<div class="col-sm-1 col-md-1"></div>
  	 		<div class="col-sm-6 col-md-6">
