about footer alignment

--- a/about/index.html
+++ b/about/index.html
@@ -1,63 +1,98 @@
----
-layout: page
-title: Services
-group: navigation
----
-{% include JB/setup %}
+--- layout: page title: Services group: navigation --- {% include JB/setup %}
 <div class="container about">
- 	<div class="row bug">
- 		<div class="col-sm-5 col-md-5">
- 			<img src="{{ ASSET_PATH }}/images/about/about_windmills.png" />
- 		</div>
- 		<div class="col-sm-1 col-md-1"></div>
-  		<div class="col-sm-6 col-md-6">
-  			<h2>Offshore wind power. Million-dollar views. New Panamax ships. Blue-label ﬁsh.</h2>
-  			<p>We are asking more and more of the coast and the ocean.</p>
-  			<p>How do we decide the best and highest uses in a complex environment?</p>
-  		</div>
-  	</div>
 	<div class="row bug">
-		
- 		<div class="col-sm-6 col-md-6">
- 			<p><span class="dark">At Point 97, we have been tackling that question in increasingly sophisticated ways for over 20 years,</span> in collaboration with ﬁshing communities, energy developers, conservation groups, governments, maritime industry, coastal landowners and other stakeholders around the world.</p>
- 		</div>
- 		<div class="col-sm-1 col-md-1"></div>
- 		<div class="col-sm-5 col-md-5">
- 			<img src="{{ ASSET_PATH }}/images/about/about_team.jpg" />
- 		</div>
- 	</div>
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_windmills.png" />
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<h2>
+				Offshore wind power. Million-dollar views. New Panamax ships. Blue-label ﬁsh.
+			</h2>
+			<p>
+				We are asking more and more of the coast and the ocean.
+			</p>
+			<p>
+				How do we decide the best and highest uses in a complex environment?
+			</p>
+		</div>
+	</div>
+	<div class="row bug">
+		<div class="col-sm-6 col-md-6">
+			<p>
+				<span class="dark">
+					At Point 97, we have been tackling that question in increasingly sophisticated ways
+					for over 20 years,
+				</span>
+				in collaboration with ﬁshing communities, energy developers, conservation groups,
+				governments, maritime industry, coastal landowners and other stakeholders around
+				the world.
+			</p>
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_team.jpg" />
+		</div>
+	</div>
 	<div class="row bug">
 		<div class="col-sm-5 col-md-5">
 			<img src="{{ ASSET_PATH }}/images/about/about_fisherman.png" />
 		</div>
-		<div class="col-sm-1 col-md-1"></div>
- 		<div class="col-sm-6 col-md-6">
- 			<p>We began our practice helping communities conduct spatial planning exercises on the West Coast of the United States, and we now consult with governments, communities, and industries from the Solomon Islands to the Mid-Atlantic.</p>
- 		</div>
- 	</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<p>
+				We began our practice helping communities conduct spatial planning exercises on
+				the West Coast of the United States, and we now consult with governments, communities,
+				and industries from the Solomon Islands to the Mid-Atlantic.
+			</p>
+		</div>
+	</div>
 	<div class="row bug">
-		
- 		<div class="col-sm-6 col-md-6">
- 			<p class="dark">Our customized decision making technologies and stakeholder engagement methods are state of the art.</p>
-			<p>Point 97’s seasoned software team constructs tools using intuitive, easy-to-use interfaces that gather, compile and visualize data in a robust and transparent manner.</P>
-			<p>Built out of deep rapport with fishermen and other ocean users, our proven methods of outreach and cooperative information gathering ensure that differing perspectives are fully represented in ocean planning.</p>
- 		</div>
- 		<div class="col-sm-1 col-md-1"></div>
- 		<div class="col-sm-5 col-md-5">
- 			<img src="{{ ASSET_PATH }}/images/screenshots/dash.png"/>
- 		</div>
- 	</div>
- 		
- 		<div class="row bug">
- 			<div class="col-sm-5 col-md-5">
- 				<img src="{{ ASSET_PATH }}/images/about/about_map.png" />
- 			</div>
- 			<div class="col-sm-1 col-md-1"></div>
- 	 		<div class="col-sm-6 col-md-6">
- 	 			<p>Working on time and on budget, our team tailors mapping portals, data gathering and stakeholder engagement to the different needs and geographies of government, industry, and civic clients.</p>
- 	 			<p>Point 97 approaches lead to smarter, faster, more inclusive decisions.</p>
-				<p>With so much at stake on the ocean, it’s time to put the best tools to work.</p>
-				<p class="pull-right"><a href="/services/index.html"><i class="icon-arrow-right"> </i> FIND OUT MORE ABOUT POINT 97 SERVICES</a></
- 	 		</div>
- 	 	</div>
+		<div class="col-sm-6 col-md-6">
+			<p class="dark">
+				Our customized decision making technologies and stakeholder engagement methods are
+				state of the art.
+			</p>
+			<p>
+				Point 97’s seasoned software team constructs tools using intuitive, easy-to-use
+				interfaces that gather, compile and visualize data in a robust and transparent manner.
+			</P>
+			<p>
+				Built out of deep rapport with fishermen and other ocean users, our proven methods
+				of outreach and cooperative information gathering ensure that differing perspectives
+				are fully represented in ocean planning.
+			</p>
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/screenshots/dash.png" />
+		</div>
+	</div>
+	<div class="row bug">
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_map.png" />
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<p>
+				Working on time and on budget, our team tailors mapping portals, data gathering
+				and stakeholder engagement to the different needs and geographies of government,
+				industry, and civic clients.
+			</p>
+			<p>
+				Point 97 approaches lead to smarter, faster, more inclusive decisions.
+			</p>
+			<p>
+				With so much at stake on the ocean, it’s time to put the best tools to work.
+			</p>
+			<p class="pull-right">
+				<a href="/services/index.html"><i class="icon-arrow-right"> </i> FIND OUT MORE ABOUT POINT 97 SERVICES</a>
+			</p>
+		</div>
+	</div>
 </div>
