--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,9 @@
---- layout: page title: Services group: navigation --- {% include JB/setup %}
+---
+layout: page
+title: Services
+group: navigation 
+---
+{% include JB/setup %}
 <div class="container about">
 	<div class="row bug">
 		<div class="col-sm-5 col-md-5">
