--- a/team/index.html
+++ b/team/index.html
@@ -4,50 +4,64 @@ title: Team
 group: navigation
 ---
 {% include JB/setup %}
-<img class="stretch" src="{{ ASSET_PATH }}/images/portraits/team.jpg"/>
-<div class="container">
-  <div class="row-fluid">
-    <div class="col-md-3">
-      <h2>Point 97</h2>
-        <p>We are a fresh-thinking, hard-working team with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre. Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
+
+<div class="container main-container">
+  <div class="row">
+    <div class="col-md-5">
+      <img class="stretch" src="{{ ASSET_PATH }}/images/portraits/team.jpg"/>
     </div>
-    <div class="col-md-9">
-      <div class="row-fluid">
-        <div class="col-md-4 col-xs-12 col-sm-4">
-          <div class="thumbnail">
-            <div class="caption">
-              <img src="{{ ASSET_PATH }}/images/portraits/ruby_thumbnail.jpg">
-              <h3>Ruby Gates</h3>
-            </div>
-          </div>
+    <div class="col-md-7">
+        <p><span class="dark">We are a fresh-thinking, hard-working team</span> with backgrounds in marine biology, natural resource management, fisheries biology, environmental science, geography, tribal government environmental law, computer science, GIS and theatre.</p>
+        <p>Whether we are in the field collecting valuable data, engaging communities, or building cutting edge tools to meet our client’s needs, our work reflects our commitment to finding technological solutions that better connect people to the places they live and work.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-xs-12 col-sm-4">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="{{ ASSET_PATH }}/images/portraits/ruby_thumbnail.jpg">
+          <h3>Ruby Gates</h3>
+          <p class="dark">CEO</p>
+          <p class="blue"><i class="icon-phone"> </i> 503.998.7829</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> ruby at pointnineseven.com</p>
         </div>
-        <div class="col-md-4  col-xs-12 col-sm-4">
-          <div class="thumbnail">
-            <div class="caption">
-              <img src="{{ ASSET_PATH }}/images/portraits/charles_thumbnail.jpg">
-              <h3>Charles Steinback</h3>
-            </div>
-          </div>
+      </div>
+    </div>
+    <div class="col-md-4  col-xs-12 col-sm-4">
+      <div class="thumbnail">
+        <div class="caption">
+          <img src="{{ ASSET_PATH }}/images/portraits/charles_thumbnail.jpg">
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
-      <div class="col-md-4 col-xs-12  col-sm-4">
-        <div class="thumbnail">
-          <div class="caption">
-              <img src="{{ ASSET_PATH }}/images/portraits/jennifer_thumbnail.jpg">
-              <h3>Jennifer Bloesser</h3>
-            </div>
-          </div>
+      </div>
+    </div>
+  <div class="col-md-4 col-xs-12  col-sm-4">
+    <div class="thumbnail">
+      <div class="caption">
+          <img src="{{ ASSET_PATH }}/images/portraits/jennifer_thumbnail.jpg">
+          <h3>Jennifer Bloesser</h3>
+          <p class="dark">Director</p>
+          <p class="blue"><i class="icon-phone"> </i> 503.467.0785</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> jennifer at pointnineseven.com</p>
         </div>
       </div>
     </div>
   </div>
+
 </div>
-<div class="container">
   <div class="row-fluid">
     <div class="col-md-3 col-xs-6 col-sm-4">
       <div class="thumbnail">
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/cheryl_thumbnail.jpg">
           <h3>Cheryl Chen</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
@@ -56,6 +70,10 @@ group: navigation
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/glazer_thumbnail.jpg">
           <h3>Tim Glaser</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
@@ -64,6 +82,10 @@ group: navigation
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/scott_thumbnail.jpg">
           <h3>Scott&nbsp;Fletcher</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
@@ -72,6 +94,10 @@ group: navigation
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/edwin_thumbnail.jpg">
           <h3>Edwin&nbsp;Knuth</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
@@ -80,6 +106,10 @@ group: navigation
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/shaunna_thumbnail.jpg">
           <h3>Shaunna&nbsp;McCovey</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
@@ -88,6 +118,10 @@ group: navigation
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/leanne_thumbnail.jpg">
           <h3>Leanne&nbsp;Weiss</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
@@ -96,9 +130,13 @@ group: navigation
         <div class="caption">
           <img src="{{ ASSET_PATH }}/images/portraits/tim_thumbnail.jpg">
           <h3>Tim&nbsp;Welch</h3>
+          <h3>Charles Steinback</h3>
+          <p class="dark">Director of Marine Planning</p>
+          <p class="blue"><i class="icon-phone"> </i> 971.404.5632</p>
+          <p class="blue"><i class="icon-envelope-alt"> </i> charles at pointnineseven.com</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-</div>
+
