--- a/services/index.html
+++ b/services/index.html
@@ -7,7 +7,7 @@ group: navigation
 <div class="container about">
  	<div class="row bug">
  		<div class="col-sm-6 col-md-6">
- 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/screenshots/deck.png"/>
+ 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/deck.jpg"/>
  			
  		</div>
   		<div class="col-sm-6 col-md-6">
