more about page

--- a/services/index.html
+++ b/services/index.html
@@ -7,12 +7,44 @@ group: navigation
 <div class="container about">
  	<div class="row bug">
  		<div class="col-sm-6 col-md-6">
- 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/deck.jpg"/>
- 			
+ 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/vi-dock.JPG"/>
  		</div>
   		<div class="col-sm-6 col-md-6">
-  			<h2>Digital Deck</h2>
+  			<h2>Digital Deck U.S. Virgin Islands and Puerto Rico</h2>
+  			<p class="dark">The Problem</p>
+			<p>Fishermen and fisheries managers in the U.S. Virgin Islands (USVI) have expressed a need for a complete and real-time approach to accessing fishery harvest information. Proactive, collaborative fisheries resource management to deliver long-term economic and biodiversity health requires near-to-real time data.</p>
+			<p>Working closely with fishermen and fisheries in the US Virgin Islands, Point 97 designed the Digital Deck platform, a data collection and reporting tool designed to transition legacy, manual and error prone data practices into reliable fishery harvest data. Digital Deck delivers a simple, easy-to-use interface via cell phone, tablet or computer technology, enabling fishermen to digitally collect their harvest data and easily transmit the data to fisheries managers.</p>
+
+  		</div>
+  	</div>
+ 	<div class="row bug">
+ 		<div class="col-sm-6 col-md-6">
+  			<p class="dark">Rethinking Paper Catch Reports</p>
+  			<p>Tracking fish harvest in near-to-real time ensures that USVI fisheries managers can assess harvests in relation to established Annual Catch Limits, and that fisherman can monitor their catch totals against catch quotas. USVI fishermen have the added benefit of accessing their historical trip data, informing future business planning. Over time, Point 97’s Digital Deck platform promotes collaborative fishing efforts among fishermen, better tracking and management of fisheries data, and adds market value to seafood, while empowering fishermen to make better harvest decisions.</p>
+
+  			<p>Most fisheries managers and fishermen would acknowledge paper log reports and manual data entry is time consuming, inefficient, and lacks historical track-back methods for management and fishing business optimization. Translating and digitizing the dense paper catch reports is the first step towards creating resource management efficiencies. In the case of USVI, the Point 97 team analyzed the paper catch report forms currently used across St. Thomas, St. John, St. Croix and Puerto Rico, respectively.  Recognizing each paper form supports dense and unique data entry points covering all of the main types of fisheries (hook and line, traps, nets, spear/hand), the Point 97 team broke these forms down into smaller groups of questions, documenting the validation required at each step of the fisherman’s input.</p>
+  		</div>
+ 		<div class="col-sm-6 col-md-6">
+ 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/deck.jpg"/>
+ 		</div>
+  	</div>
+ 	<div class="row bug">
+ 		<div class="col-sm-6 col-md-6">
+ 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/central-market-vendor.jpg"/>
+ 		</div>
+  		<div class="col-sm-6 col-md-6">
+  			<h2>Digital Deck Solomon Islands, HapiFis</h2>
   			<p class="dark">Collect and manage fisheries data more efficiently</p>
+  			Point 97 linked up with the Solomon Islands government and the Coral Triangle Initiative to develop a new mobile
+  			app that will improve the ability of surveyors to record exactly what kind of
+  			fish and how much is entering Solomon Island fish markets. The new mobile app, called Hapi
+  			Fis, will allow accurate recording and instantaneous wireless transmission
+  			of fish survey information to a database programmed to analyze the data and
+  			generate useful reports for managers, on demand.</p>
+  			<p>By improving on flawed paper survey systems, the
+  			government will have better understanding of total catch across the islands. The app sets 
+  			an example for other Coral Triangle and Pacific countries by using technology
+  			to support local economies and food security for inshore fisheries.</p>
  			<p>Digital Deck is designed to meet the expressed needs of community fishing organizations and fisheries agencies for collecting and integrating fisheries data supporting harvest accountability, traceability, collaborative research, spatial planning, and monitoring.</p>
  			<ul>
 	 			<li>Mobile data capture at sea</li>
