updating team pages

--- a/services/index.html
+++ b/services/index.html
@@ -2,6 +2,15 @@
 layout: page
 title: Services
 group: navigation
+header: true
+light: true
+transparent: true
+lat: 18.3333
+lng: -64.7333
+zoom: 5
+lat2: -9.4667
+lng2: 159.9
+zoom2: 6
 ---
 {% include JB/setup %}
 <div class="container about">
